                   ----------------------------------------
                   | CHANGES of the numericalsgps package |
                   ----------------------------------------

#======
1.3.0 -> 1.3.0 dev
- Remove IsRectangularTable as filter 
#======
1.2.2 -> 1.3.0
- Addeed NearlyGorensteinVectors
- Added CircuitsOfKernelCongruence, PrimitiveRelationsOfKernelCongruence, IsMinimalRelationOfNumericalSemigroup, AllMinimalRelationsOfNumericalSemigroup
- Added IsAlmostCanonicalIdeal, IsNearlyGorenstein, IsGeneralizedAlmostSymmetric, IsHomogeneousNumericalSemigroup, AsNumericalDuplication, DilatationOfNumericalSemigroup, RFMatrices (by Francesco Strazzanti)
- Added new section in the chapter of factorizationas, and moved IsMpure and IsPure to this new section
- Added PseudoFrobenius, Type and FrobeniusNumber for an ideal of a numerical semigroup 
- Added IsComplementOfIntegralIdeal and IdealByDivisorClosedSet
- ViewString for affine semigroups now considers singular in a single generator or minimal generator
- Decomposition of ideals into irreducibles (by Jorge Angulo)
- NumericalSemgigroupByNuSequence and NumericalSemgigroupByTauSequence (by Jorge Angulo)

#======
1.2.1 -> 1.2.2
- Bug fix for DivisorsOfElementInNumericalSemigroup(0,s).
- Bug fix in proportionally modular affine semigroups of dimenstion two
- Added IsSubset for ideals of numerical semigroups
- Disabled GradedModules

#=======
1.2.0 -> 1.2.1
- Changes in tests to fit new version of gapdays
- Code for ideals of affine semigroups by Helena Martin Cruz

#=======
1.1.0 -> 1.2.0 * brief summary *
* This is just a summary of the changes made from the major release 1.1.0 to the major release 1.2.0.
* For details, please check the lists of changes between minor releases below.
- Many small fixes and slight improvements (both in the code and in the manual).