@@ -5,6 +5,8 @@
 #======
 1.3.0 -> 1.3.0 dev
 - Remove IsRectangularTable as filter 
+- Added IsUniversallyFreeNumericalSemigroup
+
 #======
 1.2.2 -> 1.3.0
 - Addeed NearlyGorensteinVectors
